# tinycraft

./: CMakeLists.txt  Makefile  README.md
include/: msg_configuration.h  msg_handshaking.h  protocol.h  server.h  util.h
src/: main.cpp  msg_configuration.cpp  msg_handshaking.cpp  msg_login.cpp  msg_login.h  protocol.cpp  protocol.h  server.cpp  server.h  util.cpp  util.h
